--- a/index.html
+++ b/index.html
@@ -6,6 +6,15 @@
   <title>Dragonfire’s Embrace</title>
   <style>
 
+#dragonCityImage {
+  display: block;        /* Center using margin auto (needs block) */
+  margin: 0 auto 15px;   /* 0 left/right, 15px bottom for spacing */
+  max-width: 80%;        /* It can shrink/grow within 80% of parent width */
+  height: auto;          /* Maintain aspect ratio */
+  border: 2px solid #dab96c;
+  border-radius: 8px;
+}
+
 .fireworks {
   position: absolute;
   width: 5px;
