--- a/index.html
+++ b/index.html
@@ -72,6 +72,7 @@
   /* Use the smaller/longer image approach */
   background: url("Dragon City.png") no-repeat center center;
   background-size: contain; 
+  
   /* contain => keeps entire image visible, 
      making it smaller on wide screens */
 
@@ -188,11 +189,22 @@
 
   <!-- BACKSTORY/INTRO PAGE -->
 <div id="introStory" class="story">
-    <p>In the distant East lies a proud empire, steeped in centuries of tradition and guarded by legends of serpentine dragons that rule the skies. Born of this imperial lineage is <strong>Louis</strong>, a half-dragon prince said to carry the fiery blood of ancient beasts in his veins.</p>
-  
-    <p>Throughout your homeland, whispers tell of his inhuman might and the regal dynasty that shaped him—an empire famed for ceremonial pageantry and cunning warfare. Now, with tensions brewing and borders stirred by rumors of war, you have found yourself upon a collision course with this fabled prince.</p>
-  
-    <p>Fate (or folly) has drawn you both to an ominous forest of forbidden magic, its secrets older than any kingdom. And here, in these haunted woods, your paths will cross, sparking a tale of conflict, destiny, and perhaps a bond neither realm could foresee.</p>
+    <p>In the distant East lies the <strong>Dragon Kingdom</strong>, steeped in centuries of 
+        tradition and guarded by legends of serpentine dragons that rule the skies. 
+        Born of this <strong>Dragon Kingdom</strong> is <strong>Louis</strong>, a half-dragon prince 
+        said to carry the fiery blood of ancient beasts in his veins.
+     </p>
+     
+     <p>Throughout your homeland, whispers tell of his inhuman might and the regal dynasty 
+        that shaped him—<strong>the Dragon Kingdom</strong> famed for ceremonial pageantry and cunning 
+        warfare. Now, with tensions brewing and borders stirred by rumors of war, you have 
+        found yourself upon a collision course with this fabled prince.
+     </p>
+     
+     <p>Fate (or folly) has drawn you both to an ominous forest of forbidden magic, its 
+        secrets older than any kingdom. And here, your paths will cross, sparking a tale 
+        of conflict, destiny, and perhaps a bond neither realm could foresee.
+     </p>
   
     <button class="btn" onclick="choosePath('scene1')">Continue</button>
   </div>
@@ -202,10 +214,11 @@
 
     <img src="Louis.png" alt="Louis" id="louisImage" />
 
-    <p>You stand in the heart of the <strong>Cursed Woods</strong>, feeling ancient magic in the air.</p>
-    <p>“Who dares trespass here?” A low voice echoes.</p>
-    <p>A tall figure emerges: dark hair, dark eyes, scales across his arms, and two horns. <strong>Louis, the half-dragon prince</strong> from an enemy kingdom.</p>
-    <p>He fixes you with a piercing gaze.</p>
+    <p>You stand in the grand halls of an <strong>ancient temple</strong>, ...</p>
+  <p>“Who dares trespass here?” A low voice echoes.</p>
+  <p>A human-shaped figure emerges: dark hair, dark eyes, scales across his arms, and two horns. 
+     <strong>Louis, the half-dragon prince</strong> from the <strong>Dragon Kingdom</strong>.</p>
+  <p>He fixes you with a piercing gaze.</p>
     <button class="btn" onclick="choosePath('scene2')">Next</button>
   </div>
 
