--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
   /* Use the smaller/longer image approach */
   background: url("Dragon City.png") no-repeat center center;
   background-size: contain; 
-  
+
   /* contain => keeps entire image visible, 
      making it smaller on wide screens */
 
@@ -214,7 +214,7 @@
 
     <img src="Louis.png" alt="Louis" id="louisImage" />
 
-    <p>You stand in the grand halls of an <strong>ancient temple</strong>, ...</p>
+    <p>You stand in the grand halls of an <strong>ancient temple</strong> located at the hearth of the<strong>Dark Forest</strong>, ...</p>
   <p>“Who dares trespass here?” A low voice echoes.</p>
   <p>A human-shaped figure emerges: dark hair, dark eyes, scales across his arms, and two horns. 
      <strong>Louis, the half-dragon prince</strong> from the <strong>Dragon Kingdom</strong>.</p>
