--- a/index.html
+++ b/index.html
@@ -15,14 +15,6 @@
   border-radius: 8px;
 }
 
-#dragonCityImage {
-  display: block;        /* Center using margin auto (needs block) */
-  margin: 0 auto 15px;   /* 0 left/right, 15px bottom for spacing */
-  max-width: 80%;        /* It can shrink/grow within 80% of parent width */
-  height: auto;          /* Maintain aspect ratio */
-  border: 2px solid #dab96c;
-  border-radius: 8px;
-}
 
 .fireworks {
   position: absolute;
@@ -70,7 +62,7 @@
   padding: 1rem;
 
   /* Use the smaller/longer image approach */
-  background: url("Dragon City.png") no-repeat center center;
+  background: url("Louis.png") no-repeat center center;
   background-size: contain; 
 
   /* contain => keeps entire image visible, 
